--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /********** Template CSS **********/
 :root {
-    --primary: #65B530;
+    --primary: red;
     --secondary: #9B9B9B;
     --light: #F5F5F5;
     --dark: #161616;
@@ -75,6 +75,7 @@
     align-items: center;
     justify-content: center;
     font-weight: normal;
+    color: red;
 }
 
 /*** Navbar ***/
